# LichtFeld-Studio

./: .gitignore  CMakeLists.txt  _build_sb.bat  eval_once.json  vcpkg.json
docs/: imgui_inventory.md
docs/development/: vulkan-elite-roadmap.md
docs/plugins/: api-reference.md  getting-started.md
src/app/: application.cpp  converter.cpp  main.cpp  mcp_gui_tools.cpp  mcp_ui_registry_tools.cpp
src/core/: CMakeLists.txt  argument_parser.cpp  bhatt_lod.cpp  camera.cpp  checkpoint_format.cpp  lod_merge_math.hpp  octree_lod.cpp  parameters.cpp  projection_dome.cpp  splat_data.cpp  splat_exportable_storage.cpp  splat_simplify.cpp
src/diagnostics/: CMakeLists.txt  vram_profiler.cpp
src/diagnostics/include/diagnostics/: export.hpp  vram_profiler.hpp
src/io/: CMakeLists.txt  loader_service.cpp  nvcodec_image_loader.cpp  pipelined_image_loader.cpp  ply_to_rad_lod.cpp  treelet_layout.hpp
src/python/: python_runtime.cpp  python_runtime.hpp
src/rendering/: mesh2splat.cpp  raster_rendering_engine.cpp  (+2 more)
tests/: CMakeLists.txt  test_background_image.cpp  test_checkpoint_resume.cpp  test_input_controller_focus.cpp  test_lfs_scheduler.cpp  test_lod_builder_bench.cpp  test_lod_page_cache.cpp  test_lod_page_dequant.cpp  test_lod_upload_engine.cpp  test_octree_lod.cpp  test_ply_to_rad_lod.cpp  test_projection_dome.cpp  test_python_io.cpp  test_rad_meta_sidecar.cpp  test_selection_operator_modal.cpp  test_selection_rasterization_ops.cpp  test_selection_service_interactions.cpp  test_splat_simplify.cpp  test_tensor_multistream.cpp  test_undo_history.cpp  test_video_export_utils.cpp  test_vksplat_input_packer.cpp
(+274 files in other folders)
